# app

./: .gitignore  AGENTS.md  README.md  docker-compose.yml  package-lock.json  package.json  tsconfig.json
.github/: dependabot.yml
back/: Cargo.toml
back/migrations/: 0002_auth_and_locales.sql  0003_incidents.sql  0004_maintenances.sql  0005_ui_translations.sql  0006_seed_initial_data.sql  0007_user_roles_admin.sql  0008_event_management.sql  0009_nullable_incident_timeline_dates.sql  0010_projects.sql  0011_project_status_type.sql  0012_category_colors.sql  0013_generated_public_keys.sql  0014_api_tokens.sql  0015_timeline_tables.sql  0016_incident_maintenance_status.sql  0017_drop_notified_at_utc.sql  0018_merge_descriptions.sql  0020_add_timeline_user.sql  0021_add_timeline_creator.sql  0022_microsoft_auth.sql  0023_fix_microsoft_auth_constraint.sql
back/src/: auth.rs  config.rs  main.rs
back/src/admin/: http.rs  model.rs  repository.rs  service.rs
back/src/api_doc/: http.rs  mod.rs
back/src/api_tokens/: http.rs  model.rs  repository.rs  service.rs
back/src/app/: router.rs  state.rs
back/src/auth/: http.rs  model.rs  repository.rs  service.rs
back/src/categories/: http.rs  model.rs  repository.rs  service.rs
back/src/common/: auth.rs  db.rs  error.rs  i18n.rs  mod.rs  role.rs  timeline.rs  validation.rs
back/src/incidents/: http.rs  model.rs  repository.rs  service.rs
back/src/maintenances/: http.rs  model.rs  repository.rs  service.rs
back/src/projects/: http.rs  mod.rs  model.rs  repository.rs  service.rs
back/src/translations/: http.rs  model.rs  repository.rs  service.rs
front/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
infrastructure/: .terraform.lock.hcl  Makefile  README.md  app.tf  (+12 more)
(+156 files in other folders)
