[package]
name = "back"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
axum = "0.8"
axum-extra = { version = "0.12", features = ["cookie-private"] }
base64 = "0.22"
cookie = "0.18"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
envy = "0.4"
http = "1"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
rand = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
argon2 = "0.5"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2"
uuid = { version = "1", features = ["v4", "serde"] }
utoipa = { version = "5", features = ["axum_extras", "uuid", "chrono"] }
